--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - docker build -t sbl_docs .
   - mkdir -p build publish
   - chmod 777 build publish
+  - touch publish/.nojekyll
 
 script:
   - docker run --rm -v ${PWD}:/docs -w /docs sbl_docs make publish BUILDDIR=/docs/build PUBLISHDIR=/docs/publish
