--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: required
 
 dist: jammy
 
+# Set Ruby version to 2.6 to fix deployment
+# It seems that some Ruby Gems haven't been updated to support Ruby 3.0
+rvm:
+  - 2.7.8
+
 services:
   - docker
 
