--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,12 @@ script:
   - docker run --rm -v ${PWD}:/docs -w /docs sbl_docs /bin/bash -c "${GIT_SAFE_DIR_CMD} && make publish BUILDDIR=/docs/build PUBLISHDIR=/docs/publish"
 
 before_deploy:
-  - git remote -v            # Check the remote URL configuration
-  - git status               # View the state of the repository
-  - git log -3               # Show the last 3 commits to ensure the correct commit is being pushed
+  - yes | gem update --system --force
+  - gem install bundler
+  - gem install uri
+  - gem install logger
+  - gem install faraday-net_http -v 3.3.0
+
 
 deploy:
   provider: pages
@@ -27,5 +30,4 @@ deploy:
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   repo: slimbootloader/slimbootloader.github.io
   target-branch: master
-  dpl_version: 1.10.16
 
